# chirpGPT

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/models/: conversation.py
app/routes/: chat.py
app/services/: bird_noises.py  classifier.py  rate_limiter.py
app/templates/: base.html  index.html
